--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine On
 
-Redirect 301 /page1.html	https://kirsanovivan.github.io/HardSEO/page3.html
+Redirect 301 https://kirsanovivan.github.io/HardSEO/page1.html	https://kirsanovivan.github.io/HardSEO/page3.html
