--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,6 @@
+if ($request_filename ~* ^(.*).html$) {
+    rewrite ^/(.*).html /$1/ permanent;
+}
 location /page1.html/ {
   return 301 /page3.html/$is_args$args;
 }
