--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,1 @@
-if ($request_filename ~* ^(.*).html$) {
-    rewrite ^/(.*).html /$1/ permanent;
-}
-location /page1.html/ {
-  return 301 /page3.html/$is_args$args;
-}
+Redirect 301 https://kirsanovivan.github.io/HardSEO/page1.html https://kirsanovivan.github.io/HardSEO/page3.html
